# rust-httpbin

./: Cargo.toml  README.md  build.sh  design.md
.github/workflows/: release.yml  test.yml
docs/: api.md  roadmap.md
src/: app.rs  error.rs  lib.rs  main.rs  state.rs
src/api/: openapi.rs
src/endpoints/: mod.rs
src/endpoints/auth/: basic.rs  bearer.rs  mod.rs
src/endpoints/inspect/: cookies.rs  headers.rs  ip.rs  mod.rs  user_agent.rs
src/endpoints/request/: delete.rs  get.rs  mod.rs  patch.rs  post.rs  put.rs
src/endpoints/response/: delay.rs  mod.rs  redirect.rs  response_headers.rs  status.rs  stream.rs
src/endpoints/utility/: anything.rs  image.rs  mod.rs  uuid.rs
src/middleware/: access_log.rs  mod.rs  request_id.rs  trace.rs
src/models/: error.rs  mod.rs  request.rs  response.rs
src/utils/: client_ip.rs  header_utils.rs  image_bytes.rs  json_utils.rs  mod.rs  raw_headers.rs  request_body.rs  response_utils.rs
tests/: api_docs_tests.rs  auth_tests.rs  integration_tests.rs  request_tests.rs  response_tests.rs
