[package]
name = "axum-httpbin"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "compression-br"] }
cookie = "0.18"
base64 = "0.22"
futures = "0.3"
hyper = "1"
hyper-util = { version = "0.1", features = ["server", "tokio"] }
tower = "0.5"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[dev-dependencies]
tower = "0.5"
